syntax = "proto3";

package auth_service;
import "google/protobuf/timestamp.proto";
option go_package = "grpc_basic/pb/pb_auth_service";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}




