syntax = "proto3";

package proto.auth;
import "auth_user_auth.proto";
option go_package = "grpc_gateway_cleary_code/pb";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}


message CreateUserResponse {
  User user = 1;
}






